Changes on page P1 V3

--- a/ar.computrabajo/data/buenos_aires/buenos_aires_p1.html
+++ b/ar.computrabajo/data/buenos_aires/buenos_aires_p1.html
@@ -2415,7 +2415,7 @@ Más de 30 días</p></div></article>
                 Anterior
 
             </span>
-<span class="b_primary w48 buildLink cp" data-path="buenos_aires_p2.html" title="Siguiente">
+<span class="b_primary w48 buildLink cp" data-path="https://ar.computrabajo.com/empleos-en-buenos-aires?p=2" title="Siguiente">
 
                 Siguiente
 
