--- a/ar.computrabajo/data/buenos_aires/buenos_aires_p27.html
+++ b/ar.computrabajo/data/buenos_aires/buenos_aires_p27.html
@@ -36,7 +36,7 @@
 <script>if (document.referrer && !document.referrer.includes("ar.computrabajo.com")) { var date = new Date; date.setTime(date.getTime() + 864e5); var expires = "; expires=" + date.toUTCString(); document.cookie = "extrfr=" + document.referrer + expires + "; path=/;domain=ar.computrabajo.com" }</script>
 <input id="useLoginSecure" type="hidden" value="true"/>
 <input id="_id_portal" type="hidden" value="5"/>
-<link href="../data/CSS/header_portal.css" rel="stylesheet"/>
+<link href="../CSS/header_portal.css" rel="stylesheet"/>
 <header class="header_web" id="header_menu">
 <div class="container">
 <a class="logo" href="../home.html" title="Computrabajo">
