Changes on pages about Empleos Similares

--- a/ar.computrabajo/data/buenos_aires/buenos_aires_p14.html
+++ b/ar.computrabajo/data/buenos_aires/buenos_aires_p14.html
@@ -36,7 +36,7 @@
 <script>if (document.referrer && !document.referrer.includes("ar.computrabajo.com")) { var date = new Date; date.setTime(date.getTime() + 864e5); var expires = "; expires=" + date.toUTCString(); document.cookie = "extrfr=" + document.referrer + expires + "; path=/;domain=ar.computrabajo.com" }</script>
 <input id="useLoginSecure" type="hidden" value="true"/>
 <input id="_id_portal" type="hidden" value="5"/>
-<link href="../CSS/header_portal.css" rel="stylesheet"/>
+<link href="../data/CSS/header_portal.css" rel="stylesheet"/>
 <header class="header_web" id="header_menu">
 <div class="container">
 <a class="logo" href="../home.html" title="Computrabajo">
@@ -2481,116 +2481,7 @@ Hace  6  días</p></div></article>
             </span>
 </div>
 <div class="mtB mbB">
-<p class="fs16 mb10">
 
-        Empleos similares
-
-    </p>
-<a class="mb10 tag link" href="/trabajo-de-responsables-en-buenos-aires">
-<span>
-
-                Responsables
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-tecnico-electromecanico-en-buenos-aires">
-<span>
-
-                Técnico electromecánico
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operador-en-buenos-aires">
-<span>
-
-                Operador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vendedor-telefonico-en-buenos-aires">
-<span>
-
-                Vendedor telefónico
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-deposito-en-buenos-aires">
-<span>
-
-                Operario de depósito
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-auxiliar-en-buenos-aires">
-<span>
-
-                Auxiliar
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asesor-comercial-en-buenos-aires">
-<span>
-
-                Asesor comercial
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-logistica-en-buenos-aires">
-<span>
-
-                Logística
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-de-limpieza-en-buenos-aires">
-<span>
-
-                Operario/a de limpieza
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operarios-de-produccion-en-buenos-aires">
-<span>
-
-                Operarios de producción
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-ayudante-en-buenos-aires">
-<span>
-
-                Ayudante
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-operario-en-buenos-aires">
-<span>
-
-                Operario/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-vigilador-en-buenos-aires">
-<span>
-
-                Vigilador/a
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asesor-de-ventas-en-buenos-aires">
-<span>
-
-                Asesor/a de ventas
-
-            </span>
-</a>
-<a class="mb10 tag link" href="/trabajo-de-asistente-en-buenos-aires">
-<span>
-
-                Asistente
-
-            </span>
-</a>
 </div>
 <input id="urlStaticContent" type="hidden" value="//cp.ct-stc.com/web8/20251126.01_01.26/c/img/edVal.png"/>
 <input id="url_cdn_images" type="hidden" value="https://ii.ct-stc.com/5/"/>
