Changes on Home and pages

--- a/ar.computrabajo/data/home.html
+++ b/ar.computrabajo/data/home.html
@@ -646,26 +646,20 @@
 
 		<div class="container">
 
-			<div class="dFlex w100">
+			<!-- FLEX QUE SI CENTRA -->
+			<div class="dFlex w100" style="justify-content: center;">
 
 				<div class="w25 hide_m">
 
 					<h3>Institucional</h3>
 
 					<ul>
-
-						<li><a href="/quienessomos/" rel="nofollow">¿Quiénes somos?</a></li>
-
+						<li><a href="../data/quienes-somos.html" rel="nofollow">¿Quiénes somos?</a></li>
 						<li><a href="https://csccslhelp.zendesk.com/hc/es/categories/15409134220434" target="_blank" rel="nofollow">Contacto para candidatos</a></li>
-
-						<li><a href="/avisolegal/" rel="nofollow">Aviso legal</a> y <a href="https://ar.computrabajo.com/privacidad/" rel="nofollow">privacidad</a></li>
-
+						<li><a href="../data/reglamento-publicidad.html" rel="nofollow">Aviso legal</a> y <a href="https://ar.computrabajo.com/privacidad/" rel="nofollow">privacidad</a></li>
 					</ul>
 
 				</div>
-
-
-	
 
 			</div>
 
@@ -673,9 +667,8 @@
 
 	</div>
 
-
-
 </footer>
+
 
 
 
