--- a/empleobusca.com/data/home.html
+++ b/empleobusca.com/data/home.html
@@ -654,9 +654,9 @@
 					<h3>Institucional</h3>
 
 					<ul>
-						<li><a href="../data/quienes-somos.html" rel="nofollow">¿Quiénes somos?</a></li>
+						<li><a href="/empleobusca.com/data/quien-somos.html" rel="nofollow">¿Quiénes somos?</a></li>
 						<li><a href="https://csccslhelp.zendesk.com/hc/es/categories/15409134220434" target="_blank" rel="nofollow">Contacto para candidatos</a></li>
-						<li><a href="../data/reglamento-publicidad.html" rel="nofollow">Aviso legal</a> y <a href="https://ar.computrabajo.com/privacidad/" rel="nofollow">privacidad</a></li>
+						<li><a href="/empleobusca.com/data/reglamento-publicidad.html" rel="nofollow">Aviso legal</a> y <a href="https://ar.computrabajo.com/privacidad/" rel="nofollow">privacidad</a></li>
 					</ul>
 
 				</div>
