--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
 
       <div class="buttons">
         <!-- 🔗 Computrabajo (único por ahora) -->
-        <a class="btn" href="ar.computrabajo/data/home.html">
-          Computrabajo Argentina
+        <a class="btn" href="empleobusca.com/data/home.html">
+          Empleo Busca Argentina
         </a>
 
         <!--
